# register_generator

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
.github/workflows/: build.yml
docs/: DOCS.md
src/: cli_handler.rs  cli_structs.rs  command_dispatch.rs  command_handlers.rs  example.json  main.rs  tui_handler.rs  vertical_tab.rs
src/reg_gen/: header_handling.rs  json_handling.rs  mod.rs  register.rs
src/register_file_generator/: access_methods.rs  file_generator.rs  mod.rs  register.rs
src/tui_handler/: app_state.rs  home_page.rs  mod.rs  tui_root_handler.rs  util.rs
test/: CMakeLists.txt
test/cfg/: 16bit_registers.json  32bit_registers.json  64bit_registers.json  8bit_registers.json  other_test_cfg.json  test_cfg.json
test/src/: 16BitTest.cpp  32BitTest.cpp  64BitTest.cpp  8BitTest.cpp  CMakeLists.txt  main.cpp
