[package]
name = "register_generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tui = "0.19.0"
